# ts_proto_library_bug

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json
src/: BUILD.bazel  house.proto  room.proto
